@@ -1,3 +1,12 @@
+2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/glob_filter.h:
+	* libutil++/string_filter.h:
+	* libutil++/tests/string_filter_tests.cpp: minor tidy
+
+	* libutil++/tests/glob_filter_tests.cpp: new file
+	* libutil++/tests/Makefile.am: update build
+
 2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libpp/arrange_profiles.cpp: typo
